--- a/iframe/index.html
+++ b/iframe/index.html
@@ -11,6 +11,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover">
 <canvas style="position:fixed;inset:0;width:100%;height:100%;background:#000" width="0" height="0"></canvas>
 <script type="module">
+// nice try
+if(location.origin != 'https://sandbox-41i.pages.dev') throw 1
 delete Navigator.prototype.serviceWorker
 delete Navigator.prototype.storage
 delete Navigator.prototype.storageBuckets
