--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html spellcheck="false" autocomplete="off" autocapitalize="off" lang="en" ontouchend="getSelection().removeAllRanges();event.preventDefault();alert(event.target);event.target.focus();event.changedTouches[0].bubbles=true;event.target.dispatchEvent(new MouseEvent('click', event.changedTouches[0]))" oncontextmenu="event.preventDefault();" onwheel="if(event.ctrlKey) event.preventDefault()" style="font-size:2px;--pr:0">
+<html spellcheck="false" autocomplete="off" autocapitalize="off" lang="en" ontouchend="getSelection().removeAllRanges();event.preventDefault();event.changedTouches[0].bubbles=true;event.target.dispatchEvent(new MouseEvent('click', event.changedTouches[0]));event.target.focus()" oncontextmenu="event.preventDefault();" onwheel="if(event.ctrlKey) event.preventDefault()" style="font-size:2px;--pr:0">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover">
