--- a/iframe/index.html
+++ b/iframe/index.html
@@ -270,7 +270,7 @@ class img{
 	sub(x=0, y=0, w=1, h=1, l=this.l){
 		return new img(this.t, this.x+x*this.w, this.y+y*this.h, this.w*w, this.h*h, l)
 	}
-	super(x=0,y=0,w=1,h=1){
+	sup(x=0,y=0,w=1,h=1){
 		const tw = this.w/w, th = this.h/h
 		return new img(this.t, this.x-x*tw, this.y-y*th, tw, th)
 	}
@@ -305,9 +305,22 @@ class img{
 		let w=0, h=0
 		const rj = e => {
 			toLoad = -1
-			gl.deleteTexture(t.tex)
+			const {o} = t
+			img.fakeBind(t)
+			if(t.f[3]>>31)
+				gl.texParameterf(35866, 10240, 9728),
+				gl.texParameterf(35866, 10241, 9728)
+			else
+				gl.texParameterf(35866, 10240, 9728+(o&1)),
+				gl.texParameterf(35866, 10241, t.m?9984+(o>>1&3):9728+(o>>1&1))
+			gl.texParameterf(35866, 10242, o&8?10497:o&16?33648:33071)
+			gl.texParameterf(35866, 10243, o&32?10497:o&64?33648:33071)
+			gl.texStorage3D(35866, t.m||1, t.f[0], t.w=1, t.h=h=1, t.d=imgs.length)
+			if(!pma) gl.pixelStorei(37440,1),gl.pixelStorei(37441,pma=1)
+			if(t.m) gl.generateMipmap(35866)
+			if(t.i<0) gl.bindTexture(35866, null)
 			if(t.cbs) for(let i = 1; i < t.cbs.length; i+=3) t.cbs[i]?.(t.cbs[i+1])
-			t.tex = t.cbs = null
+			t.cbs = null
 		}
 		const imgs = t.src.map(a=>{
 			const i = new Image()
