--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	function install(){
 		navigator.wakeLock?.request('screen').catch(e => null)
 		if(sw.controller) sw.controller.postMessage(null)
-		else sw.register('./sw.js', {type: 'module', updateViaCache: 'all'}).then(r => (r.active??r.installing).postMessage(null))
+		else sw.register('./sw.js', {updateViaCache: 'all'}).then(r => (r.active??r.installing).postMessage(null))
 		sw.onmessage = ({data}) => {
 			if(data<0) return void(b.textContent = sw.controller?'Update failed':'Please reload/reinstall app', document.body.onpointerdown=()=>location='')
 			a.style.setProperty('--p', data*100+'%')
